...
"common.done" = "Done";

/* ==================== */
/* MARK: - Tab Bar      */
/* ==================== */

"tab.home" = "Home";
"tab.for_you" = "For You";
"tab.search" = "Search";
"tab.bookmarks" = "Bookmarks";
"tab.feed" = "Feed";
"tab.media" = "Media";

...
"category.entertainment" = "Entertainment";

/* ==================== */
/* MARK: - Home         */
/* ==================== */

"home.title" = "News";
"home.breaking" = "BREAKING";
"home.breaking_news" = "Breaking News";
"home.top_headlines" = "Top Headlines";
"home.recently_read" = "Recently Read";
"home.category.all" = "All";
"home.error.title" = "Unable to Load News";
...
